--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Sahaa</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/images/favicon.svg">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/bootstrap.min.css'>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/bootstrap.min.css'><link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/global.css'>
 
@@ -18,22 +20,24 @@
 <body>
     <section class="main-header">
         <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <a class="navbar-brand" href="#"><img src="assets/images/Logo SVG.svg" class="img-fluid"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <div class="container cus-container">
+                <a class="navbar-brand" href="#"><img src="assets/images/market-logo.png" class="img-fluid"></a>
+                <button class="navbar-toggler" id="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <!-- <span class="navbar-toggler-icon"></span> -->
+                    <i class="fa fa-bars"></i>
+                    <i class="fa fa-times d-none"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Who Are We</a>
+                            <a class="nav-link active" aria-current="page" href="#">Who&nbsp;Are&nbsp;We</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                What we Do
+                                What&nbsp;we&nbsp;Do
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -44,7 +48,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Case Studies
+                                Case&nbsp;Studies
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -58,49 +62,134 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Blog</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link btn nav-btn" href="#"><i class="fa fa-phone"></i> Book A Call</a>
-                        </li>
                     </ul>
+                    <a class="nav-link btn nav-btn" href="#">Get A Qoute</a>
                 </div>
             </div>
         </nav>
-        <div class="container">
-            <div class="main-header-content">
-                <h1>Want More <span class="main-color" id="changingword">Reaults?</span></h1>
-                <h3>Let us help you.</h3>
-                <p>We’re a <b class="main-color">Digital Marketing Agency in London,</b> made up of a group of
-                    passionate<br>
-                    individuals who get excited about helping small to medium sized businesses create<br> impact with
-                    their customers.</p>
+
+        <div class="top-header">
+            <div class="container">
+
+                <!-- <div class="row main-row">
+                    <div class="col-md-6">
+                        <img src="assets/images/Group 182.png" class="img-fluid">
+                    </div>
+                    <div class="col-md-6 right-sec">
+                        <div class="right-text-sec">
+                            <h1 class="top-right-text">DO YOU</h1>
+                            <h1>WANT MORE<br>
+                                CONNECTIONS?</h1>
+                            <h3>Let us help you.</h3>
+                            <div class="text-center">
+                                <p>We’re a Digital Marketing Agency in London, made up of a group of 
+                                    passionate individuals who get excited about helping small to medium sized businesses create impact with their customers.</p>
+                            </div>
+                            <div class="buttons">
+                                <button class="btn black-fill-btn">Who we are?</button>
+                                <button class="btn white-outline-btn">How we Work</button>
+                            </div>
+                            <h1 class="bottom-right-text">01</h1>
+                        </div>
+                    </div>
+                </div> -->
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <div class="row main-row">
+                            <div class="col-md-6">
+                                <img src="assets/images/Group 182.png" class="img-fluid">
+                            </div>
+                            <div class="col-md-6 right-sec">
+                                <div class="right-text-sec">
+                                    <h1 class="top-right-text">DO YOU</h1>
+                                    <h1>WANT MORE<br>
+                                        CONNECTIONS?</h1>
+                                    <h3>Let us help you.</h3>
+                                    <div class="text-center">
+                                        <p>We’re a Digital Marketing Agency in London, made up of a group of 
+                                            passionate individuals who get excited about helping small to medium sized businesses create impact with their customers.</p>
+                                    </div>
+                                    <div class="buttons">
+                                        <button class="btn black-fill-btn">Who we are?</button>
+                                        <button class="btn white-outline-btn">How we Work</button>
+                                    </div>
+                                    <h1 class="bottom-right-text">01</h1>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="row main-row">
+                            <div class="col-md-6">
+                                <img src="assets/images/Group 182.png" class="img-fluid">
+                            </div>
+                            <div class="col-md-6 right-sec">
+                                <div class="right-text-sec">
+                                    <h1 class="top-right-text">DO YOU</h1>
+                                    <h1>WANT MORE<br>
+                                        CONNECTIONS?</h1>
+                                    <h3>Let us help you.</h3>
+                                    <div class="text-center">
+                                        <p>We’re a Digital Marketing Agency in London, made up of a group of 
+                                            passionate individuals who get excited about helping small to medium sized businesses create impact with their customers.</p>
+                                    </div>
+                                    <div class="buttons">
+                                        <button class="btn black-fill-btn">Who we are?</button>
+                                        <button class="btn white-outline-btn">How we Work</button>
+                                    </div>
+                                    <h1 class="bottom-right-text">02</h1>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="row main-row">
+                            <div class="col-md-6">
+                                <img src="assets/images/Group 182.png" class="img-fluid">
+                            </div>
+                            <div class="col-md-6 right-sec">
+                                <div class="right-text-sec">
+                                    <h1 class="top-right-text">DO YOU</h1>
+                                    <h1>WANT MORE<br>
+                                        CONNECTIONS?</h1>
+                                    <h3>Let us help you.</h3>
+                                    <div class="text-center">
+                                        <p>We’re a Digital Marketing Agency in London, made up of a group of 
+                                            passionate individuals who get excited about helping small to medium sized businesses create impact with their customers.</p>
+                                    </div>
+                                    <div class="buttons">
+                                        <button class="btn black-fill-btn">Who we are?</button>
+                                        <button class="btn white-outline-btn">How we Work</button>
+                                    </div>
+                                    <h1 class="bottom-right-text">03</h1>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button> -->
+                  </div>
             </div>
         </div>
-    </section>
-
-    <section class="home-sec-two sec-padding">
-        <div class="container">
-            <div class="col-md-10 m-auto text-center">
-                <h1 class="mb-3">Digital Marketing Agency In London</h1>
-                <h2 class="main-color mb-3">Proactive, Effective Marketing Solutions</h2>
-                <h4 class="mb-3">For Small-To-Medium Sized Businesses</h4>
-                <p>
-                    Unlike other big-name digital marketing agencies in London, we’re not hunting down giant
-                    corporations. We know who we want to work with; small businesses like yours.
-                </p>
-                <p>The Good Marketer was set up with the belief that small can also be mighty and taking small
-                    consistent steps will lead to success. The secret behind our marketing magic isn’t mystical at all,
-                    in fact, we pride ourselves on being jargon-busting, data-driven, human-focused marketers. Our work
-                    and our achievements on all channels are because we operate as an extension of your own team. </p>
-                <p>Getting to know your business, understanding your audiences and what truly matters to both of you, is
-                    how we drive incredible results. We’re more than just a marketing agency; our mission is to support
-                    you. And we’re obsessed with your business’ success.</p>
-            </div>
-        </div>
-    </section>
-
-
-    <section style="height: 1500px">
-        <h1>hiii</h1>
+        <ul class="top-header-vertical-ul">
+            <li><a href="#">FaceBook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Linkdin</a></li>
+        </ul>
     </section>
 
     <script src="assets/js/jquery.js"></script>
