start section two

--- a/index.html
+++ b/index.html
@@ -192,10 +192,52 @@
             <li><a href="#">Linkdin</a></li>
          </ul>
       </section>
+
+
+      <!-- about us section start -->
+      <section class="market-about-us">
+        <div class="container">
+            <div class="row first-row">
+                <div class="col-md-12 text-center">
+                    <h6>ABOUT US</h6>
+                </div>
+            </div>
+            <div class="row second-row">
+                <div class="col-md-12 text-center">
+                    <h1 class="redOne-fill-color">Digital Marketing Agency In UAE</h1>
+                    <h1>Proactive, Effective Marketing Solutions</h1>
+                </div>
+            </div>
+            <div class="row third-row">
+                <div class="col-md-6">
+                    <div class="row gx-0">
+                        <div class="col-1">
+                            <img src="assets/images/Ellipse 10.png" class="img-fluid circle-img">
+                        </div>
+                        <div class="col-11">
+                            <h1>For Small-To-Medium<br>
+                                Sized Businesses</h1>
+                            <p>Unlike other big-name digital marketing agencies in London, we’re not hunting down giant corporations. We know who we want to work with; small businesses like yours.
+                                <br><br>
+
+                                The Good Marketer was set up with the belief that small can also be mighty and taking small consistent steps will lead to success. The secret behind our marketing magic isn’t mystical at all, in fact, we pride ourselves on being jargon-busting, data-driven, human-focused 
+                                marketers. Our work and our achievements on all channels are 
+                                because we operate as an extension of your own team. <br><br>
+                                
+                                Getting to know your business, understanding your audiences and what truly matters to both of you, is how we drive incredible results. We’re more than just a marketing agency; our mission is to support you. And we’re obsessed with your business’ success.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+
+                </div>
+            </div>
+        </div>
+      </section>
+      <!-- about us section end -->
+
+
       <script src="assets/js/jquery.js"></script>
-      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-      <script src='assets/js/bootstrap.bundle.js'></script>
-      <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-      <script src="./assets/js/main.js"></script>
+      <script src='assets/js/bootstrap.bundle.js'></script><script src="./assets/js/main.js"></script>
    </body>
 </html>
