add more info in section two

--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-
+                    <div class="images-sec">
+                        <img src="assets/images/Group 193.png" class="img-fluid">
+                        <img src="assets/images/Group 195.png" class="img-fluid position-img">
+                    </div>
                 </div>
             </div>
         </div>
