fix second section mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -209,15 +209,15 @@
                 </div>
             </div>
             <div class="row third-row">
-                <div class="col-md-6">
-                    <div class="row gx-0">
+                <div class="col-md-12 col-lg-6">
+                    <div class="row gx-1 gx-md-0">
                         <div class="col-1">
                             <img src="assets/images/Ellipse 10.png" class="img-fluid circle-img">
                         </div>
                         <div class="col-11">
                             <h1>For Small-To-Medium<br>
                                 Sized Businesses</h1>
-                            <p>Unlike other big-name digital marketing agencies in London, we’re not hunting down giant corporations. We know who we want to work with; small businesses like yours.
+                            <p class="mt-3">Unlike other big-name digital marketing agencies in London, we’re not hunting down giant corporations. We know who we want to work with; small businesses like yours.
                                 <br><br>
 
                                 The Good Marketer was set up with the belief that small can also be mighty and taking small consistent steps will lead to success. The secret behind our marketing magic isn’t mystical at all, in fact, we pride ourselves on being jargon-busting, data-driven, human-focused 
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12 col-lg-6">
                     <div class="images-sec">
                         <img src="assets/images/Group 193.png" class="img-fluid">
                         <img src="assets/images/Group 195.png" class="img-fluid position-img">
