add two more sections

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="container">
             <div class="row first-row">
                 <div class="col-md-12 text-center">
-                    <h6>ABOUT US</h6>
+                    <h6 class="section-small-h6">ABOUT US</h6>
                 </div>
             </div>
             <div class="row second-row">
@@ -215,7 +215,7 @@
                             <img src="assets/images/Ellipse 10.png" class="img-fluid circle-img">
                         </div>
                         <div class="col-11">
-                            <h1>For Small-To-Medium<br>
+                            <h1 class="section-h45">For Small-To-Medium<br>
                                 Sized Businesses</h1>
                             <p class="mt-3">Unlike other big-name digital marketing agencies in London, we’re not hunting down giant corporations. We know who we want to work with; small businesses like yours.
                                 <br><br>
@@ -238,6 +238,171 @@
         </div>
       </section>
       <!-- about us section end -->
+
+
+      <!-- case study section start-->
+
+      <section class="market-case-study">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <h6 class="section-small-h6 m-0">CASE STUDY</h6>
+               </div>
+               <div class="col-md-12 mt-4">
+                  <h1 class="section-h45">A Diversified<br>
+                     Resilient Projects</h1>
+               </div>
+            </div>
+            <div class="row cards-row mt-5">
+               <div class="col-sm-6 col-md-4 text-center mt-2">
+                  <div class="case-card">
+                     <img src="assets/images/Group 196.png" class="img-fluid">
+                     <div class="case-card-text text-start">
+                        <h6>Yr Pod, Hertfordshire</h6>
+                        <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-6 col-md-4 text-center mt-2">
+                  <div class="case-card">
+                     <img src="assets/images/Group 199.png" class="img-fluid">
+                     <div class="case-card-text text-start">
+                        <h6>Yr Pod, Hertfordshire</h6>
+                        <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-6 col-md-4 text-center mt-2">
+                  <div class="case-card">
+                     <img src="assets/images/Group 200.png" class="img-fluid">
+                     <div class="case-card-text text-start">
+                        <h6>Yr Pod, Hertfordshire</h6>
+                        <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-6 col-md-4 text-center mt-2">
+                  <div class="case-card">
+                     <img src="assets/images/Group 378.png" class="img-fluid">
+                     <div class="case-card-text text-start">
+                        <h6>Yr Pod, Hertfordshire</h6>
+                        <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                        <div class="d-flex flex-w align-items-center justify-content-between">
+                           <button class="btn">Case Study</button>
+                           <i class="fa fa-search"></i>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-6 col-md-4 text-center mt-2">
+                  <div class="case-card">
+                     <img src="assets/images/Group 380.png" class="img-fluid">
+                     <div class="case-card-text text-start">
+                        <h6>Yr Pod, Hertfordshire</h6>
+                        <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-sm-6 col-md-4 text-center mt-2">
+                  <div class="case-card">
+                     <img src="assets/images/Group 383.png" class="img-fluid">
+                     <div class="case-card-text text-start">
+                        <h6>Yr Pod, Hertfordshire</h6>
+                        <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- case study section end -->
+
+
+      <!-- digital marketing section start -->
+
+      <section class="market-digital-marketing">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <h6 class="section-small-h6 m-0">WHY CHOOSE US</h6>
+               </div>
+               <div class="col-md-12 mt-4">
+                  <h1 class="section-h45">As Your Digital<br>
+                     Marketing Agency?</h1>
+               </div>
+            </div>
+            <div class="row mt-5">
+               <div class="col-md-12 col-lg-6 mt-2">
+                  <div class="video-sec">
+                     <img src="assets/images/Group 562.png" class="img-fluid">
+                     <button class="btn"><i class="fa fa-play" aria-hidden="true"></i> &nbsp; &nbsp; Play Now</button>
+                  </div>
+               </div>
+               <div class="col-md-12 col-lg-6 mt-2">
+                   <div class="col-12 col-lg-12 m-auto mt-2">
+                     <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              Transparent
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <p>The Good Marketer believes in open and honest 
+                                 relationships with all our partners. We provide regular updates with equal attention paid to the reasons behind your greatest successes as well as any areas that could be improved. You’ll know exactly what we’re spending your hours on and where your money is going - because we know, for a small business, it doesn’t grow on trees.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              Proactive
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <p>The Good Marketer believes in open and honest 
+                                 relationships with all our partners. We provide regular updates with equal attention paid to the reasons behind your greatest successes as well as any areas that could be improved. You’ll know exactly what we’re spending your hours on and where your money is going - because we know, for a small business, it doesn’t grow on trees.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              Affordable
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <p>The Good Marketer believes in open and honest 
+                                 relationships with all our partners. We provide regular updates with equal attention paid to the reasons behind your greatest successes as well as any areas that could be improved. You’ll know exactly what we’re spending your hours on and where your money is going - because we know, for a small business, it doesn’t grow on trees.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                           <h2 class="accordion-header" id="headingFour">
+                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                              Flexible
+                             </button>
+                           </h2>
+                           <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                             <div class="accordion-body">
+                              <p>The Good Marketer believes in open and honest 
+                                 relationships with all our partners. We provide regular updates with equal attention paid to the reasons behind your greatest successes as well as any areas that could be improved. You’ll know exactly what we’re spending your hours on and where your money is going - because we know, for a small business, it doesn’t grow on trees.</p>
+                             </div>
+                           </div>
+                         </div>
+                      </div>
+                   </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+
+      <!-- digital marketing section start -->
 
 
       <script src="assets/js/jquery.js"></script>
