--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <link rel="icon" href="assets/images/favicon.svg">
       <meta name='viewport' content='width=device-width, initial-scale=1'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/bootstrap.min.css'>
+      <link rel="stylesheet" href="assets/owlcarousel/assets/owl.carousel.min.css">
+      <link rel="stylesheet" href="assets/owlcarousel/assets/owl.theme.default.min.css">
       <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/style.css'>
       <link rel='stylesheet' type='text/css' media='screen' href='./assets/css/global.css'>
@@ -460,7 +462,69 @@
       <!-- greate team section end -->
 
 
+      <!-- video content section start -->
+
+      <section class="market-video-content">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12 text-center">
+                  <h6 class="section-small-h6">OUR VIDEO CONTENT PORTFOLIO</h6>
+                  <h1 class="section-h45 mt-5">As a Marketing Agency in UAE, we offer full range of
+                     content creation services to support your brand.</h1>
+               </div>
+            </div>
+            <div class="row video-slider-row">
+               <div class="large-12 columns">
+                  <h3>Demo</h3>
+                  <div class="owl-carousel">
+                    <div class="item">
+                      <div class="carosal-item text-center">
+                        <img src="assets/images/Group 597.png" class="img-fluid">
+                        <div class="carosal-img-overlay"></div>
+                      </div>
+                    </div>
+                    <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Group 595.png" class="img-fluid">
+                        <div class="carosal-img-overlay"></div>
+                      </div>
+                    </div>
+                    <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Group 599.png" class="img-fluid">
+                        <div class="carosal-img-overlay"></div>
+                      </div>
+                    </div>
+                    <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Group 595.png" class="img-fluid">
+                        <div class="carosal-img-overlay"></div>
+                      </div>
+                    </div>
+                    <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Group 597.png" class="img-fluid">
+                        <div class="carosal-img-overlay"></div>
+                      </div>
+                    </div>
+                    <div class="item">
+                     <div class="carosal-item text-center">
+                        <img src="assets/images/Group 599.png" class="img-fluid">
+                        <div class="carosal-img-overlay"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- video content section end -->
+
+
       <script src="assets/js/jquery.js"></script>
-      <script src='assets/js/bootstrap.bundle.js'></script><script src="./assets/js/main.js"></script>
+      <script src='assets/js/bootstrap.bundle.js'></script>
+      <script src="assets/owlcarousel/owl.carousel.js"></script>
+      <script src="./assets/js/main.js"></script>
    </body>
 </html>
