add greate partner sec 2

--- a/index.html
+++ b/index.html
@@ -473,9 +473,8 @@
                      content creation services to support your brand.</h1>
                </div>
             </div>
-            <div class="row video-slider-row">
-               <div class="large-12 columns">
-                  <h3>Demo</h3>
+            <div class="row video-slider-row mt-5">
+               <div class="large-12 columns mt-2">
                   <div class="owl-carousel">
                     <div class="item">
                       <div class="carosal-item text-center">
