start work on new section

--- a/index.html
+++ b/index.html
@@ -521,6 +521,51 @@
       <!-- video content section end -->
 
 
+
+      <!-- subscribe partner section start -->
+
+      <section class="market-subscribe-partner">
+         <div class="container-fluid p-0">
+            <!-- <div class="row main-row">
+               <div class="col-md-6 left-sec">
+                  <div class="text-center">
+                     <h6>Get In Touch</h6>
+                     <h1 class="section-h45">SUBSCRIBE OUR</h1>
+                     <h1 class="section-h45 outline-text">NEWSLETTER</h1>
+                     <div class="position-relative">
+                        <input type="text" class="subscribe-input form-control" placeholder="Enter your Email">
+                        <button class="btn connect-btn">CONNECT</button>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-6 right-sec">
+   
+               </div>
+            </div> -->
+            <div class="row">
+               <div class="col-md-6">
+                  <div class="subscribe-sec">
+                     <img src="assets/images/Group 864.png" class="img-fluid">
+                     <div class="subscribe-text text-center">
+                     <h6>Get In Touch</h6>
+                     <h1 class="section-h45">SUBSCRIBE OUR</h1>
+                     <h1 class="section-h45 outline-text">NEWSLETTER</h1>
+                     <div class="position-relative">
+                     <input type="text" class="subscribe-input form-control" placeholder="Enter your Email">
+                     <button class="btn connect-btn">CONNECT</button>
+                     </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-6">
+
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- subscribe partner section end -->
+
       <script src="assets/js/jquery.js"></script>
       <script src='assets/js/bootstrap.bundle.js'></script>
       <script src="assets/owlcarousel/owl.carousel.js"></script>
