add partner section

--- a/index.html
+++ b/index.html
@@ -525,25 +525,9 @@
       <!-- subscribe partner section start -->
 
       <section class="market-subscribe-partner">
-         <div class="container-fluid p-0">
-            <!-- <div class="row main-row">
-               <div class="col-md-6 left-sec">
-                  <div class="text-center">
-                     <h6>Get In Touch</h6>
-                     <h1 class="section-h45">SUBSCRIBE OUR</h1>
-                     <h1 class="section-h45 outline-text">NEWSLETTER</h1>
-                     <div class="position-relative">
-                        <input type="text" class="subscribe-input form-control" placeholder="Enter your Email">
-                        <button class="btn connect-btn">CONNECT</button>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-6 right-sec">
-   
-               </div>
-            </div> -->
-            <div class="row">
-               <div class="col-md-6">
+         <div class="container-fluid w-100 p-0">
+            <div class="row w-100">
+               <div class="col-md-12 col-lg-6 p-0">
                   <div class="subscribe-sec">
                      <img src="assets/images/Group 864.png" class="img-fluid">
                      <div class="subscribe-text text-center">
@@ -557,8 +541,25 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-6">
-
+               <div class="col-md-12 col-lg-6 p-0 our-partner-sec">
+                  <div class="inner">
+                     <div>
+                        <h6 class="section-small-h6 m-0">OUR PARTNER</h6>
+                        <h1 class="section-h45 mt-5 mt-lg-3 mt-xl-5">Join Our Finibus<br> 
+                           Community.</h1>
+                           
+                        <div class="row">
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                           <div class="col-3 mt-3 mt-md-3 mt-lg-2 mt-xl-4 logo-col"><img src="assets/images/Rectangle 49109.png" class="partner-logo img-fluid"></div>
+                        </div>
+                     </div>
+                  </div>
                </div>
             </div>
          </div>
