--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
       <section class="market-subscribe-partner">
          <div class="container-fluid w-100 p-0">
-            <div class="row w-100">
+            <div class="row w-100 m-0 m-lg-auto">
                <div class="col-md-12 col-lg-6 p-0">
                   <div class="subscribe-sec">
                      <img src="assets/images/Group 864.png" class="img-fluid">
@@ -566,6 +566,72 @@
       </section>
 
       <!-- subscribe partner section end -->
+
+
+      <!-- best service section start -->
+
+
+      <section class="best-service-sec">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="col-md-12 text-center">
+                  <h6 class="section-small-h6">WHAT WE DO BEST</h6>
+                  <h1 class="section-h45 mt-5">Our Digital Marketing<br>
+                     Services</h1>
+               </div>
+            </div>
+            <div id="carouselExampleCaptions" class="carousel slide mt-5" data-bs-ride="carousel">
+               <div class="carousel-indicators">
+                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+               </div>
+               <div class="carousel-inner text-center">
+                 <div class="carousel-item active">
+                  <div class="carosal-text">
+                     <h1 class="section-h45">Facebook Advertising</h1>
+                  <p class="mt-3">Getting your product/service in front of the right people, at the right time goes ‘hand in hand’ with success. So let us make that happen for you. Use our expertise as a full service and creative marketing agency in London to manage the whole process; from writing to 
+                     designing – and of course, split testing your adverts to improve results.</p>
+                  </div>
+                   <!-- <img src="assets/images/Group 864.png" class="d-block w-100" alt="...">
+                   <div class="carousel-caption d-none d-md-block">
+                     <h5>First slide label</h5>
+                     <p>Some representative placeholder content for the first slide.</p>
+                   </div> -->
+                 </div>
+                 <div class="carousel-item">
+                  <div class="carosal-text">
+                     <h1 class="section-h45">Facebook Advertising</h1>
+                  <p class="mt-3">Getting your product/service in front of the right people, at the right time goes ‘hand in hand’ with success. So let us make that happen for you. Use our expertise as a full service and creative marketing agency in London to manage the whole process; from writing to 
+                     designing – and of course, split testing your adverts to improve results.</p>
+                  </div>
+                 </div>
+                 <div class="carousel-item">
+                  <div class="carosal-text">
+                     <h1 class="section-h45">Facebook Advertising</h1>
+                  <p class="mt-3">Getting your product/service in front of the right people, at the right time goes ‘hand in hand’ with success. So let us make that happen for you. Use our expertise as a full service and creative marketing agency in London to manage the whole process; from writing to 
+                     designing – and of course, split testing your adverts to improve results.</p>
+                  </div>
+                 </div>
+               </div>
+               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                 <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+                 <i class="fa fa-chevron-left"></i>
+                 <span class="visually-hidden">Previous</span>
+               </button>
+               <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                 <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+                 <i class="fa fa-chevron-right"></i>
+                 <span class="visually-hidden">Next</span>
+               </button>
+             </div>
+         </div>
+      </section>
+
+
+
+      <!-- best service section end-->
 
       <script src="assets/js/jquery.js"></script>
       <script src='assets/js/bootstrap.bundle.js'></script>
