--- a/index.html
+++ b/index.html
@@ -574,12 +574,10 @@
       <section class="best-service-sec">
          <div class="container">
             <div class="row">
-               <div class="col-md-12">
                   <div class="col-md-12 text-center">
                   <h6 class="section-small-h6">WHAT WE DO BEST</h6>
                   <h1 class="section-h45 mt-5">Our Digital Marketing<br>
                      Services</h1>
-               </div>
             </div>
             <div id="carouselExampleCaptions" class="carousel slide mt-5" data-bs-ride="carousel">
                <div class="carousel-indicators">
@@ -632,6 +630,161 @@
 
 
       <!-- best service section end-->
+
+
+      <!-- our packages section start -->
+
+      <section class="our-packages-sec">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-10 m-auto text-center">
+                  <h6 class="section-small-h6">PRICING</h6>
+                  <h1 class="section-h45 mt-5">Packages to suit small businesses </h1>
+                 <div class="mt-4">
+                  <p class="global-p">The Good Marketer has taken the mystery out of agency fees with our clear breakdowns and purpose-built packages to suit all businesses. Our packages cover all of our services from Social Media Advertising to SEO. If you’d like to find out which package is best suited to your requirements or you want something a little more flexible, simply book a call.</p>
+                 </div>
+               </div>
+            </div>
+         </div>
+         <div class="packages-table-outer">
+            <div class="container pt-4 pb-4">
+               <table class="table d-none d-md-table">
+                  <thead>
+                     <tr>
+                        <td class="empty">&nbsp;</td>
+                        <td class="bg">Starter</td>
+                        <td class="bg">Advanced</td>
+                        <td class="bg">Elite</td>
+                        <td class="bg">Ultimate</td>
+                     </tr>
+                     <tr class="head-table-two">
+                        <td class="empty">&nbsp;</td>
+                        <td>750<br>Per month + VAT</td>
+                        <td>1500<br>Per month + VAT</td>
+                        <td>2400<br>Per month + VAT</td>
+                        <td>4000<br>Per month + VAT</td>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td class="td-first">Included Hours</td>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>45</td>
+                        <td>75</td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Term</td>
+                        <td>3 Months</td>
+                        <td>3 Months</td>
+                        <td>6 Months</td>
+                        <td>6 Months</td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Team Member</td>
+                        <td>Account Executive</td>
+                        <td>Account Executive</td>
+                        <td>Account Executive</td>
+                        <td>Account Executive</td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Audience Research</td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Copywriting</td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Compaign Setup</td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Management &<br>
+                           Optimization</td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Conversation Rate<br>
+                           Optimisation</td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Google Analytics<br>
+                           Tracking</td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Monthly Reports</td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Bespoke Report<br>
+                           Dashboard</td>
+                        <td><i class="fa fa-check inActive-mark mark"></i></td>
+                        <td><i class="fa fa-check inActive-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Consultancy</td>
+                        <td><i class="fa fa-check inActive-mark mark"></i></td>
+                        <td><i class="fa fa-check inActive-mark mark"></i></td>
+                        <td><i class="fa fa-check inActive-mark mark"></i></td>
+                        <td><i class="fa fa-check active-mark mark"></i></td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Meetings</td>
+                        <td>Fortnightly</td>
+                        <td>Fortnightly</td>
+                        <td>Weekly</td>
+                        <td>Weekly</td>
+                     </tr>
+                     <tr>
+                        <td class="td-first">Setup</td>
+                        <td>12 - 14 Days</td>
+                        <td>12 - 14 Days</td>
+                        <td>7 - 10 Days</td>
+                        <td>7 - 10 Days</td>
+                     </tr>
+                  </tbody>
+               </table>
+               <div class="mt-5">
+                  <div class="col-6 m-auto">
+                     <button class="book-call-btn form-control btn">Book a Call</button>
+                  </div>
+                  <div class="col-10 m-auto mt-4 text-center">
+                     <p class="global-p">We will be able to advise on the best package for your business during your initial 30 minute consultation.
+                        Rolling Monthly Agreement Available / Package Excludes Any Advertising Spend.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- our packages section end -->
+
 
       <script src="assets/js/jquery.js"></script>
       <script src='assets/js/bootstrap.bundle.js'></script>
