add team call and marketing section

--- a/index.html
+++ b/index.html
@@ -878,6 +878,132 @@
          </div>
       </section>
       <!-- top marketing section end-->
+
+      <!-- latest news section start -->
+
+      <section class="latest-news-sec">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-4 mt-3">
+                  <div class="news-card">
+                     <div class="card-header text-center">
+                        <img src="assets/images/Group 648.png" class="img-fluid">
+                     </div>
+                     <div class="card-body">
+                        <h3>Erat Vehicula Gravida Seden
+                           Tincidunt Tortor.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-4 mt-3">
+                  <div class="news-card">
+                     <div class="card-header text-center">
+                        <img src="assets/images/Group 650.png" class="img-fluid">
+                     </div>
+                     <div class="card-body">
+                        <h3>Erat Vehicula Gravida Seden
+                           Tincidunt Tortor.</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-md-4 order-first order-md-last mt-3">
+                  <h6 class="section-small-h6 m-0">LATTEST BLOGS</h6>
+                  <h1 class="section-h45 mt-4">Latest News<br>
+                     And Article<br>
+                     Modern Design.
+                  </h1>
+                  <button class="btn btn-view-bolgs mt-4">View All Blogs</button>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- latest news section end -->
+
+
+
+      <!-- Digital marketing agency section start -->
+
+      <section class="digital-agency-sec">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12 text-center">
+                  <h1 class="section-h45 mt-5">A DIGITAL MARKETING<br>
+                     AGENCY UNLIKE ANY OTHER</h1>
+               </div>
+            </div>
+            <div class="row text-row">
+               <div class="col-md-10 m-auto text-center">
+                  <p class="global-p">We understand small businesses come in all different shapes and sizes, made up of people from a range of backgrounds but all working towards one vision in mind. </p>
+                  <p class="global-p">We may be a digital marketing agency in London, but we’re also a team of dynamic individuals, all with unique passions and a fondness for dogs. We strive to be different but what brings us together is we all share one thing: we love helping small businesses create a real impact with their marketing whilst driving value for money. </p>
+                  <p class="global-p">The Good Marketer is the team that shows up with the right attitude as well as all the right knowledge. We’re always thinking ‘what is the data showing us?’, ‘what’s next?’ and we never become complacent. </p>
+                  <p class="global-p">Although we’ve got a formula that is rooted in our experience, our aim is to work with your small business to develop a bespoke approach to your campaigns. Check out our case studies, read our 5-star reviews, meet our team, and schedule a chat to find out more about what we can do for you!</p>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- Digital marketing agency section end -->
+
+
+      <!-- call our team secction start -->
+
+      <section class="team-call-sec">
+         <div class="container">
+            <div class="row heading-row">
+               <div class="col-md-12 text-center">
+                  <h6 class="section-small-h6">HAVE A PROJECT IN MIND?</h6>
+                  <h1 class="section-h45 mt-4">Book a call with our team</h1>
+               </div>
+            </div>
+         </div>
+         <div class="container-fluid w-100 p-0">
+            <div class="row w-100 m-0 m-lg-auto full-row">
+               <div class="col-md-12 col-lg-6 p-0 left-section-bg">
+                  <div class="text-box text-center">
+                     <h6>Get In Touch</h6>
+                     <h1 class="section-h45">HAVE ANY QUESTIONS</h1>
+                     <h1 class="section-h45 outline-text">IN MIND</h1>
+                  </div>
+               </div>
+               <div class="col-md-12 col-lg-6 p-0 right-form-sec">
+                  <div class="inner">
+                     <h6 class="section-small-h6 m-0">REACH US TODAY</h6>
+                     <h1 class="section-h45 mt-4 mt-lg-3 mt-xl-4">Contact us.</h1>
+                     <div class="col-md-12 col-lg-8 contact-us-form">
+                        <form>
+                           <div class="row">
+                              <div class="col-md-12">
+                                 <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Enter Your Name">
+                                 </div>
+                              </div>
+                              <div class="col-md-6">
+                                 <input type="text" class="form-control" placeholder="Enter Your Phone #">
+                              </div>
+                              <div class="col-md-6">
+                                 <input type="text" class="form-control" placeholder="Subject">
+                              </div>
+                              <div class="col-md-12">
+                                 <textarea class="form-control" rows="8" placeholder="Your Message"></textarea>
+                              </div>
+                           </div>
+                           <button class="btn submit-btn">Send Message</button>
+                        </form>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!-- call our team secction end -->
+
+
+
+
       <script src="assets/js/jquery.js"></script>
       <script src='assets/js/bootstrap.bundle.js'></script>
       <script src="assets/owlcarousel/owl.carousel.js"></script>
